# latent_void

./: .gitignore  CLAUDE.md  DiffSplat_Ablation_Summary.md  PPT_20_Slide_Narrative.md  Project_Details.md  README.md  check_frames.html  check_hole_size.py  check_lama_black.py  check_mask_overlap.py  fix_virtual_masks.py  fix_virtual_masks_erode.py  fix_virtual_masks_exact_hole.py  opus_plan.md  pyproject.toml  report_full.md  sample_instructions.md  summary.md  test_hole_color.py
configs/: inpaint360gs_example.yaml  native_latent_training_example.yaml  zaratan_inpaint360gs_bag.yaml  zaratan_inpaint360gs_bag_masked_denoiser.yaml
docs/: NATIVE_DIFFSPLAT_LATENT_INPAINTING.md  PIPELINE.md  ZARATAN.md
latent_void/: __init__.py  __main__.py  cli.py  colmap.py  config.py  datasets.py  diffsplat_compat.py  external.py  gaussians.py  geometry.py  io.py  latent.py  masks.py  pipeline.py  slurm.py
project_memory/: BAG_FULL_TECHNICAL_REPORT_2026-05-05.md  BAG_PRESENTATION_DOC_2026-05-05.md  CONTEXT.md  DECISIONS.md  FINAL_TECHNICAL_REPORT_DRAFT.md  INPAINT360GS_BAG_VIRTUAL_DEPTH_FUSION_RECIPE.md  INPAINT360GS_CAR_VIRTUAL_FUSION_GRID_FIX.md  INPAINT360GS_FULL_PIPELINE_RUNBOOK.md  INPAINT360GS_SAM3_DIRECT_GUIDE.md  INPAINT360GS_VIRTUAL_SCENE_PLAYBOOK.md  PLAN.md  PROGRESS_AND_REMAINING.md  README.md  STATUS.md  TECHNICAL_REPORT_GENERATION_PLAN.md  ZARATAN.md
reports/: gdl_final_report_draft.md
scripts/: check_sam3_access.py  download_diffsplat_aux.py  download_inpaint360gs.sh  download_marigold.py  gpu_run_all.sh  hpc_login_fork_relief.sh  install_inpaint360gs_overrides.sh  (+13 more)
(+60 files in other folders)
